core application & ui for 1.6.1PR3
git-svn-id: https://gama-platform.googlecode.com/svn/branches/GAMA_CURRENT@9391 b91ef52e-2b48-11df-9ab6-b1cdc0d4a89a